# DetectorCCMD

./: .gitignore  README.md  SMB_PROPAGATION_README.md  api-call-from-dll-detector.py  api-hook-prompt.txt  detector.py  encryptor.py  file-encryption-detector.py  propagator.py  pyproject.toml  shellcode-loader.cpp  smb_propagation_detector.py  static_propagation_detector.py  test_smb_detection.py
