[project]
name = "detectorccmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.2",
    "pandas>=2.2.3",
    "pefile>=2024.8.26",
    "psutil>=7.0.0",
    "pyinstaller>=6.10.0",
    "pywin32>=310",
    "watchdog>=6.0.0",
]
